--- a/indexes/NES.html
+++ b/indexes/NES.html
@@ -25,7 +25,7 @@
          <div class="centered-container w-container">
             <div class="cards-grid-container">
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/indexes/superMario.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/download.png" alt="" class="cards-image-2"/></div>
                   <h3>Super Mario</h3>
                   <p></p>
                </a>
