--- a/retro-bowl-main/index.html
+++ b/retro-bowl-main/index.html
@@ -9,11 +9,11 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta charset="utf-8"/>
 
-        <title>Retro Bowl | 3kh0</title>
+        <title>Retro Bowl | abc</title>
 
         <style>
             body {
-              background: #0;
+              background: #404040;
               color:#cccccc;
               margin: 0px;
               padding: 0px;
