--- a/indexes/NES.html
+++ b/indexes/NES.html
@@ -14,7 +14,7 @@
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-2 w-nav">
          <div class="w-container">
             <a href="#" class="w-nav-brand"><img loading="lazy" src="../uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/620da4a3a72e064238860684_icons8-dice-48.png" alt="" class="image"/></a>
-            <nav role="navigation" class="w-nav-menu"><a href="/indexes/index.html" class="nav-link-2 w-nav-link">Home</a><a href="/indexes/changeLog.html" class="nav-link-2 w-nav-link">Change Log</a><a href="#" class="nav-link-2 w-nav-link">Link</a><a href="#" class="nav-link-2 w-nav-link">Link</a></nav>
+            <nav role="navigation" class="w-nav-menu"><a href="/index.html" class="nav-link-2 w-nav-link">Home</a><a href="/indexes/changeLog.html" class="nav-link-2 w-nav-link">Change Log</a><a href="#" class="nav-link-2 w-nav-link">Link</a><a href="#" class="nav-link-2 w-nav-link">Link</a></nav>
             <div class="w-nav-button">
                <div class="w-icon-nav-menu"></div>
             </div>
@@ -29,10 +29,15 @@
                   <h3>Super Mario</h3>
                   <p></p>
                </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="#" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image-2"/></div>
-                  <h3>More Games</h3>
-                  <p>Coming soon </p>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/superMario2.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/supermario2.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Super Mario 2</h3>
+                  <p></p>
+               </a>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/superMario3.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/supermario3.jpeg" alt="" class="cards-image-2"/></div>
+                  <h3>Super Mario 3</h3>
+                  <p></p>
                </a>
             </div>
          </div>
