--- a/indexes/emulated.html
+++ b/indexes/emulated.html
@@ -14,7 +14,7 @@
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-2 w-nav">
          <div class="w-container">
             <a href="#" class="w-nav-brand"><img loading="lazy" src="../uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/620da4a3a72e064238860684_icons8-dice-48.png" alt="" class="image"/></a>
-            <nav role="navigation" class="w-nav-menu"><a href="/indexes/index.html" class="nav-link-2 w-nav-link">Home</a><a href="/indexes/changeLog.html" class="nav-link-2 w-nav-link">Change Log</a><a href="#" class="nav-link-2 w-nav-link">Link</a><a href="#" class="nav-link-2 w-nav-link">Link</a></nav>
+            <nav role="navigation" class="w-nav-menu"><a href="/index.html" class="nav-link-2 w-nav-link">Home</a><a href="/indexes/changeLog.html" class="nav-link-2 w-nav-link">Change Log</a><a href="#" class="nav-link-2 w-nav-link">Link</a><a href="#" class="nav-link-2 w-nav-link">Link</a></nav>
             <div class="w-nav-button">
                <div class="w-icon-nav-menu"></div>
             </div>
