--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ p2 {
       font-size: 20px;
       line-height: 44px;
       margin-top: 20px;
-      color: #000000;
+      color: #e73030;
 }
       </style>
    </head>
@@ -34,9 +34,11 @@ p2 {
             <div class="text-block-2">Site</div>
          </div>
       </div>
-      <p2>
-      Feb 18 - added Retro Bowl and Super Mario NES
-      </p2>
+      
+         <p2>
+            - Feb 20 - added Game Boy Advance Games
+         </p2>
+      
       <section id="cards-section" class="cards-section wf-section">
          <div class="centered-container w-container">
             <div class="cards-grid-container">
