--- a/indexes/changeLog.html
+++ b/indexes/changeLog.html
@@ -19,7 +19,7 @@ p2 {
       font-size: 20px;
       line-height: 44px;
       margin-top: 20px;
-      color: #000000;
+      color: #e60404;
 }
       </style>
    </head>
@@ -39,10 +39,16 @@ p2 {
             Changes
          </p1>
       </div>
-      <p2>
-      
-         Feb 18 - added Retro Bowl and Super Mario NES
-      </p2>
+      <div>
+         <p2>
+            - Feb 18 - added Retro Bowl and Super Mario NES
+         </p2>
+      </div>
+      <div>
+         <p2>
+            - Feb 20 - added Game Boy Advance Games
+         </p2>
+      </div>
       <script src="../d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c84c89.js?site=620d7dc8542dd7112d174bd1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="../uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/js/webflow.cac9d76a6.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
    </body>
    <!-- Mirrored from ethans-superb-site-c86679.webflow.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Feb 2022 22:05:52 GMT -->
