--- a/indexes/tetris.html
+++ b/indexes/tetris.html
@@ -23,7 +23,7 @@
             <div class="text-block-2">Site</div>
          </div>
       </div>
-      <embed type="text/html" src="/games-gh-pages/tetris/index.html" width="1053" height="680">
+      <center><embed type="text/html" src="/games-gh-pages/tetris/index.html" width="1053" height="680"></center>
 
 
 
