--- a/indexes/superMario3.html
+++ b/indexes/superMario3.html
@@ -27,7 +27,7 @@
       <div id="all-contents"> 
          <main>
          <div style="margin: auto; width: 75%;">
-            <canvas id="nes-canvas" width="256" height="240" style="width: 56%"/>
+            <center><canvas id="nes-canvas" width="256" height="240" style="width: 56%"></canvas></center>
             <p>DPad: Arrow keys<br/>Start: Return, Select: Tab<br/>A Button: A, B Button: S</p>
      </div>
 
