--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ p2 {
       </div>
       <div>
          <p2>
-            - Feb 20 - added Game Boy Advance Games and Space Company
+            - added Game Boy Advance Games and Space Company
          </p2>
       </div>
       <div>
          <p2>
-            - Feb 18 - added Retro Bowl and Super Mario NES
+             - added Retro Bowl and Super Mario NES
          </p2>
       </div>
       
