--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -49,10 +49,10 @@
                   <h3>Pac-Man</h3>
                   <p></p>
                </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/puzzle.html" class="div-block-3 w-inline-block">
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="#" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/puzzle.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Puzzles</h3>
-                  <p></p>
+                  <p>DISABLED: NOT WORKING</p>
                </a>
                
             </div>
