--- a/indexes/NES.html
+++ b/indexes/NES.html
@@ -39,6 +39,11 @@
                   <h3>Super Mario 3</h3>
                   <p></p>
                </a>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/zelda.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/maxresdefault (1).jpg" alt="" class="cards-image-2"/></div>
+                  <h3>The Legend of Zelda</h3>
+                  <p></p>
+               </a>
             </div>
          </div>
       </section>
