fullscreen added to all html games

--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -39,7 +39,7 @@
                   <h3>Space Company</h3>
                   <p></p>
                </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/tetris.html" class="div-block-3 w-inline-block">
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/games-gh-pages/tetris/index.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/tetris.webp" alt="" class="cards-image-2"/></div>
                   <h3>Tetris</h3>
                   <p></p>
