--- a/indexes/pacman.html
+++ b/indexes/pacman.html
@@ -23,6 +23,7 @@
             <div class="text-block-2">Site</div>
          </div>
       </div>
+      <a href='/games-gh-pages/pacman/index.html'><button class="button button1">Full Screen</button></a>
       <center><embed type="text/html" src="/games-gh-pages/pacman/index.html" width="808" height="580"></center>
 
 
