--- a/indexes/slope.html
+++ b/indexes/slope.html
@@ -23,6 +23,7 @@
             <div class="text-block-2">Site</div>
          </div>
       </div>
+      <a href='/Slope-Game-main/index.html'><button class="button button1">Full Screen</button></a>
       <center><embed type="text/html" src="/Slope-Game-main/index.html" width="853" height="580"></center>
       <p>It may take a while to load</p>
 
