--- a/indexes/space.html
+++ b/indexes/space.html
@@ -23,6 +23,7 @@
             <div class="text-block-2">Site</div>
          </div>
       </div>
+      <a href='/spaceCompany/index.html'><button class="button button1">Full Screen</button></a>
       <center><embed type="text/html" src="/spaceCompany/index.html" width="1135" height="580"></center>
 
 
