--- a/indexes/changeLog.html
+++ b/indexes/changeLog.html
@@ -34,10 +34,16 @@ p2 {
             <div class="text-block-2">Site</div>
          </div>
       </div>
+      
       <div>
          <p1>
             Changes
          </p1>
+      </div>
+      <div>
+         <p2>
+            - added HexGL
+         </p2>
       </div>
       <div>
          <p2>
@@ -54,6 +60,7 @@ p2 {
             - added Retro Bowl and Super Mario NES
          </p2>
       </div>
+      
       <script src="../d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c84c89.js?site=620d7dc8542dd7112d174bd1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="../uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/js/webflow.cac9d76a6.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
    </body>
    
