--- a/indexes/changeLog.html
+++ b/indexes/changeLog.html
@@ -42,6 +42,11 @@ p2 {
       </div>
       <div>
          <p2>
+            - added many HTML games
+         </p2>
+      </div>
+      <div>
+         <p2>
             - added HexGL
          </p2>
       </div>
