home page changes

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@ p2 {
             <div class="cards-grid-container">
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/indexes/emulated.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/consoles.jpg" alt="" class="cards-image-2"/></div>
-                  <h3>Emulated Games</h3>
-                  <p>Games emulated from retro consoles </p>
+                  <h3>Retro Games</h3>
+                  <p>games emulated from retro consoles </p>
                </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/HTML.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/html.png" alt="" class="cards-image-2"/></div>
-                  <h3>HTML Games</h3>
+                  <div class="cards-image-mask"><img src="/cardImages/controller.png" alt="" class="cards-image-2"/></div>
+                  <h3>Games</h3>
                   <p>basic browser games</p>
                </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/soundBoard.html" class="div-block-3 w-inline-block">
