--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -70,6 +70,11 @@
                   <h3>Space Company</h3>
                   <p></p>
                </a>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/fortnite.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/fortnite.png" alt="" class="cards-image-2"/></div>
+                  <h3>Fortnite</h3>
+                  <p></p>
+               </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/pacman.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/digital-art-artwork-pac-man-video-games-wallpaper.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Pac-Man</h3>
