--- a/index copy.html
+++ b/index copy.html
@@ -9,28 +9,54 @@
       <link href="/uploads-ssl.webflow.com/620d7dc8542dd7112d174bd1/css/siteMain.css" rel="stylesheet" type="text/css"/>
       <script src="/ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <style>
-         p1 {
-      font-size: 40px;
-      line-height: 44px;
-      margin-top: 20px;
-      color: #e20000b9;
+ html {
+  height:100%;
 }
-p2 {
-      font-size: 20px;
-      line-height: 44px;
-      margin-top: 20px;
-      color: #e73030;
+
+body {
+  margin:0;
 }
+
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg, rgb(151, 23, 0) 50%, rgb(0, 0, 0) 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
+h1 {
+  font-family:monospace;
+}
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+
       </style>
    </head>
-
    <div class="bg"></div>
    <div class="bg bg2"></div>
    <div class="bg bg3"></div>
    <div class="a"></div><div id="circle"></div>
-
-
-
    <body class="body">
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-2 w-nav">
          <div class="w-container">
@@ -48,11 +74,7 @@ p2 {
            As of 3/26/22 Added:
         </p2>
      </div>
-<div>
-      <p2>
-         -Updated UI
-      </p2>
-   </div>
+
      <div>
       <p2>
          -Updated Minecraft JS
@@ -62,11 +84,6 @@ p2 {
    <div>
       <p2>
          -Added Five Nights at Freddy's 1-4
-      </p2>
-   </div>
-   <div>
-      <p2>
-         -PS: The site will probably get a UI and structure overhaul soon.
       </p2>
    </div>
 </center>
