--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@ p2 {
                   <p>sound buttons</p>
                </a>
                
-               
+               <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+   <img src="https://hitwebcounter.com/counter/counter.php?page=7966389&style=0025&nbdigits=3&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
             </div>
          </div>
       </section>
