--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -67,7 +67,7 @@
                   <h3>Bit Life</h3>
                   <p></p>
                </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/bitLife.html" class="div-block-3 w-inline-block">
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/sansFight.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/sans-fight.gif" alt="" class="cards-image-2"/></div>
                   <h3>Sans Fight</h3>
                   <p></p>
