--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -31,7 +31,12 @@
       <section id="cards-section" class="cards-section wf-section">
          <div class="centered-container w-container">
             <div class="cards-grid-container">
-               
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/flashGames.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/adobe-flash-logo.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Flash Games</h3>
+                  
+               </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/slope.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/slope-m280x230.png" alt="" class="cards-image-2"/></div>
                   <h3>Slope</h3>
