--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -12,11 +12,16 @@
       font-size: 20px;
       color: #4c00ff;
      
-}
+        }
+        h1 {
+            font-size: 20px;
+            color: #4c00ff;
+        }
+
        </style>
     </head>
     <body>
-        <h1>Online Soundboard</h1>
+        <h1>Sound Board</h1>
         <script>
             // functions for audio control menu
             function playAll() {
