--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -21,7 +21,7 @@
        </style>
     </head>
     <body>
-        <h1>Sound Board</h1>
+        <h1>Northshore High Sound Board</h1>
         <script>
             // functions for audio control menu
             function playAll() {
