--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@ p2 {
                <li>Learn to Fly</li>
                <li>Papa's Pizzeria</li>
             </p2>
-
+            <p2>
+               Added: 
+               <li><a href="/indexes/flashGames.html">The Legend of Zelda 3D</a></li>
+            </p2>
 
             <p1>Next Game : </p1>
             <p1 id="demo"></p1> 
