--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ p2 {
             </p2>
             <p2>
                Added: 
-               <li><a href="/indexes/flashGames.html">The Legend of Zelda 3D</a></li>
+               <li><a href="/games/zelda3d/index.html">The Legend of Zelda 3D</a></li>
             </p2>
 
             <p1>Next Game : </p1>
