--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -21,7 +21,11 @@
        </style>
     </head>
     <body>
-        <h1>Northshore High Sound Board</h1>
+        <h1>Northshore High Sound Board
+            <div>
+                Made By Ethan A 
+            </div>
+        </h1>
         <script>
             // functions for audio control menu
             function playAll() {
