--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -114,6 +114,16 @@ p2 {
                   <h3>Among Us</h3>
                   <p></p>
                </a>
+
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/tanukiSunset.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/tanukiSunset.png" alt="" class="cards-image-2"/></div>
+                  <h3>Tanuki Sunset</h3>
+                  <p></p>
+               </a>
+
+
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/space.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/SpaceCompanyFavicon.png" alt="" class="cards-image-2"/></div>
                   <h3>Space Company</h3>
