--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -21,10 +21,8 @@
        </style>
     </head>
     <body>
-        <h1>Northshore High Sound Board
-            <div>
-                Made By Ethan A 
-            </div>
+        <h1>Sound Board
+            
         </h1>
         <script>
             // functions for audio control menu
