--- a/indexes/emulated.html
+++ b/indexes/emulated.html
@@ -33,12 +33,12 @@
          <div class="centered-container w-container">
             <div class="cards-grid-container">
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/indexes/NES.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/nes.png" alt="" class="cards-image-2"/></div>
                   <h3>NES Games</h3>
                   <p></p>
                </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-main/gba.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="https://uploads-ssl.webflow.com/5db1c76aadcfe25e881680fa/5db86dc421496616bf357c25_placeholder.svg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/gameboy.png" alt="" class="cards-image-2"/></div>
                   <h3>GBA Games</h3>
                   <p></p>
                </a>
