--- a/indexes/HTML.html
+++ b/indexes/HTML.html
@@ -69,6 +69,11 @@ p2 {
                   <h3>Slope</h3>
                   
                </a>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/slope2.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/slope2.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Slope 2</h3>
+                  <p></p>
+               </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/templeRun.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/templeRun.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Temple Run 2</h3>
@@ -92,6 +97,11 @@ p2 {
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/hexgl.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/hex.jpg" alt="" class="cards-image-2"/></div>
                   <h3>HexGL</h3>
+                  <p></p>
+               </a>
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/shuttleDeck.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Shuttle Deck</h3>
                   <p></p>
                </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/2048.html" class="div-block-3 w-inline-block">
