sound board gone

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ p2 {
                </a>
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/indexes/soundBoard.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/sound.png" alt="" class="cards-image-2"/></div>
-                  <h3>Sound Board</h3>
-                  <p>sound buttons</p>
+                  <h3>Sound Board REMOVED</h3>
+                  <p>yall ruined it</p>
                </a>
                
                <!-- Total Visits START -->
