--- a/indexes/soundBoard.html
+++ b/indexes/soundBoard.html
@@ -25,7 +25,7 @@
          </div>
       </div>
      
-      <center><embed type="text/html" src="/soundboard/index.html" width="1053" height="580"></center>
+      <center><img src="/cardImages/dance-moves.gif" alt="lol" style="width:600px;height:500px;"></center>
          
 
 
