--- a/core-html/retroGames.html
+++ b/core-html/retroGames.html
@@ -37,7 +37,7 @@
             <div class="cards-grid-container">
 
 
-                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/indexes/NES.html" class="div-block-3 w-inline-block">
+                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/core-html/NES.html" class="div-block-3 w-inline-block">
                     <div class="cards-image-mask"><img src="/cardImages/nes.png" alt="" class="cards-image-2"/></div>
                     <h3>NES Games</h3>
                     <p></p>
