--- a/nes-indexes/super-mario2.html
+++ b/nes-indexes/super-mario2.html
@@ -11,7 +11,10 @@
       <link href="/siteBuild/css/siteMain.css" rel="stylesheet" type="text/css"/>
       <link href="/siteBuild/icon/siteIcon.ico" rel="shortcut icon" type="image/x-icon"/>
       <script src="/siteBuild/font/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-   </head>
+      <script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
+      <script type="text/javascript" src="/nes/nes-embed.js"></script>
+      <script>window.onload = function(){nes_load_url("nes-canvas", "/nes/super2.nes");}</script>
+    </head>
 
    <div class="bg"></div>
    <div class="bg bg2"></div>
@@ -31,39 +34,10 @@
             <div class="text-block-3">abc</div>
          </div>
       </div>
-      
-      <section id="cards-section" class="cards-section wf-section">
-         <div class="centered-container w-container">
-            <div class="cards-grid-container">
+      <div style="margin: auto; width: 75%;">
+        <center><canvas id="nes-canvas" width="256" height="240" style="width: 56%"/></center>
+    </div>
 
-
-
-               <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="/nes-indexes/super-mario.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/supermario.png" alt="" class="cards-image-2"/></div>
-                  <h3>Super Mario</h3>
-                  <p></p>
-               </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/nes-indexes/super-mario2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/supermario2.jpg" alt="" class="cards-image-2"/></div>
-                  <h3>Super Mario 2</h3>
-                  <p></p>
-               </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/nes-indexes/super-mario3.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/supermario3.jpeg" alt="" class="cards-image-2"/></div>
-                  <h3>Super Mario 3</h3>
-                  <p></p>
-               </a>
-               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/nes-indexes/zelda.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/maxresdefault (1).jpg" alt="" class="cards-image-2"/></div>
-                  <h3>The Legend of Zelda</h3>
-                  <p></p>
-               </a>
-
-
-
-            </div>
-         </div>
-      </section>
       <script src="/siteBuild/js/jquery-3.5.1.min.dc5e7f18c84c89.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="/siteBuild/js/mainJS.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
      
    </body>
