--- a/core-html/NDS.html
+++ b/core-html/NDS.html
@@ -37,43 +37,43 @@
             <div class="cards-grid-container">
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=mario-kart-ds&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/marioKart.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Mario Kart</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=new-super-mario-bros&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/SuperMarioBros.jpg" alt="" class="cards-image-2"/></div>
                   <h3>New Super Mario Bros</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=nintendogs-best-friends&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/nintendoDogs.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Nintendogs: Best Friends</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=super-mario-64-ds&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/superMario64ds.png" alt="" class="cards-image-2"/></div>
                   <h3>Super Mario 64 DS</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=pokemon-diamond&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/pokemonDiamond.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Pokemon Diamond</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=pokemon--platinum&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/pokemonPlatinum.png" alt="" class="cards-image-2"/></div>
                   <h3>Pokemon Platinum</h3>
                   <p></p>
                </a>
 
                <a data-w-id="2dab3caa-390b-10b2-6286-43bb2fd4a2e5" href="player.html?game=pokemon-pearl&type=nds" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/NDS/pokemonPearl.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Pokemon Pearl</h3>
                   <p></p>
                </a>
