--- a/core-html/games.html
+++ b/core-html/games.html
@@ -37,7 +37,7 @@
             <div class="cards-grid-container">
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/2048.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/2048Icon.png" alt="" class="cards-image-2"/></div>
                   <h3>2048</h3>
                   <p></p>
                </a>
@@ -55,19 +55,19 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/among-us.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/among-us.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Among Us</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/basketball-stars.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/basketballstars.png" alt="" class="cards-image-2"/></div>
                   <h3>Basketball Stars</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/bitlife.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/bitlife.png" alt="" class="cards-image-2"/></div>
                   <h3>Bitlife</h3>
                   <p></p>
                </a>
@@ -85,19 +85,19 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/craftmine.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/craftmine.png" alt="" class="cards-image-2"/></div>
                   <h3>CraftMine</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/deal-or-no-deal.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/dealOrNoDeal.png" alt="" class="cards-image-2"/></div>
                   <h3>Deal of No Deal</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/death-run-3d.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/deathRun.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Death Run 3D</h3>
                   <p></p>
                </a>
@@ -145,7 +145,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/factory-balls.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/factoryBalls.png" alt="" class="cards-image-2"/></div>
                   <h3>Factory Balls</h3>
                   <p></p>
                </a>
@@ -157,43 +157,43 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/flappy-bird.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/flappyBird.png" alt="" class="cards-image-2"/></div>
                   <h3>Flappy Bird</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/fnaf1.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/fnaf1.png" alt="" class="cards-image-2"/></div>
                   <h3>Five Nights at Freddy's</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/fnaf2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/fnaf2.png" alt="" class="cards-image-2"/></div>
                   <h3>Five Nights at Freddy's 2</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/fnaf3.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/fnaf3.png" alt="" class="cards-image-2"/></div>
                   <h3>Five Nights at Freddy's 3</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/fnaf4.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/fnaf4.png" alt="" class="cards-image-2"/></div>
                   <h3>Five Nights at Freddy's 4</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/fruit-ninja.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/fruitNinja.png" alt="" class="cards-image-2"/></div>
                   <h3>Fruit Ninja</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/geo-dash.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/geodash.png" alt="" class="cards-image-2"/></div>
                   <h3>Geo Dash</h3>
                   <p></p>
                </a>
@@ -205,36 +205,34 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/hex-gl.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/hex.jpg" alt="" class="cards-image-2"/></div>
                   <h3>HexGL</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/hextris.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/hextris.png" alt="" class="cards-image-2"/></div>
                   <h3>Hextris</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/idle-breakout.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/idlebreakout.png" alt="" class="cards-image-2"/></div>
                   <h3>Idle Breakout</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/madalin-stunt-cars2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/MadalinStunt.png" alt="" class="cards-image-2"/></div>
                   <h3>Madalin Stunt Car 2</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/madalin-stunt-cars2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/mandalinStunt3.jpeg" alt="" class="cards-image-2"/></div>
                   <h3>Madalin Stunt Car 3</h3>
                   <p></p>
                </a>
-
-             
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/oregon-trail.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
@@ -243,7 +241,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/paper-io2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/paperio.png" alt="" class="cards-image-2"/></div>
                   <h3>Paper io 2</h3>
                   <p></p>
                </a>
@@ -255,7 +253,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/retro-bowl.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/Retro_Bowl_cover.png" alt="" class="cards-image-2"/></div>
                   <h3>Retro Bowl</h3>
                   <p></p>
                </a>
@@ -267,13 +265,13 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/sand-game.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/sand.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Sand Game</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/sans-fight.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/sans-fight.gif" alt="" class="cards-image-2"/></div>
                   <h3>Sans Fight</h3>
                   <p></p>
                </a>
@@ -291,13 +289,13 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/slope.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/slope-m280x230.png" alt="" class="cards-image-2"/></div>
                   <h3>Slope</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/slope2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/slope2.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Slope 2</h3>
                   <p></p>
                </a>
@@ -309,43 +307,43 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/space-company.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/SpaceCompanyFavicon.png" alt="" class="cards-image-2"/></div>
                   <h3>Space Company</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/stack.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/stack.png" alt="" class="cards-image-2"/></div>
                   <h3>Stack</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/stack-bump-3d.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/stack-bump.png" alt="" class="cards-image-2"/></div>
                   <h3>Stack Bump 3D</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/swerve.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/swerve.png" alt="" class="cards-image-2"/></div>
                   <h3>Swerve</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/tanuki-sunset.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/tanukiSunset.png" alt="" class="cards-image-2"/></div>
                   <h3>Tanuki Sunset</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/temple-run2.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/templeRun.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Temple Run 2</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/the-cube.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/cube.png" alt="" class="cards-image-2"/></div>
                   <h3>The Cube</h3>
                   <p></p>
                </a>
@@ -357,13 +355,13 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes//townscaper.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/townScraper.png" alt="" class="cards-image-2"/></div>
                   <h3>Townscaper</h3>
                   <p></p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/tunnel-rush.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/tunnelRush.png" alt="" class="cards-image-2"/></div>
                   <h3>Tunnel Rush</h3>
                   <p></p>
                </a>
@@ -375,7 +373,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/vex6.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/Vex6.png" alt="" class="cards-image-2"/></div>
                   <h3>Vex 6</h3>
                   <p></p>
                </a>
@@ -387,7 +385,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/games/zelda3d/index.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/" alt="" class="cards-image-2"/></div>
                   <h3>Zelda 3D</h3>
                   <p></p>
                </a>
