--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       font-size: 40px;
       line-height: 44px;
       margin-top: 20px;
-      color: #000000b9;
+      color: #c99e00;
       text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 #000, -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 #000;
 }
 p2 {
       font-size: 20px;
       line-height: 44px;
       margin-top: 20px;
-      color: #ff0000;
-      text-shadow: -1px -1px 0 rgb(160, 160, 160),1px -1px 0 rgb(117, 114, 114),-1px 1px 0 rgb(117, 117, 117), 1px 1px 0 #000;
+      color: #c99e00;
+      text-shadow: -1px -1px 0 rgb(0, 0, 0),1px -1px 0 qrgb(0, 0, 0),-1px 1px 0 rgb(0, 0, 0), 1px 1px 0 #000;
 }
 
 
