--- a/core-html/changeLog.html
+++ b/core-html/changeLog.html
@@ -12,22 +12,23 @@
       <link href="/siteBuild/icon/siteIcon.ico" rel="shortcut icon" type="image/x-icon"/>
       <script src="/siteBuild/font/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Changa One:400,400italic","Exo:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script><!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]--><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
       <style>
-        p1 {
-     font-size: 40px;
-     line-height: 44px;
-     margin-top: 20px;
-     color: #000000b9;
-     text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 #000, -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 #000;
+         p1 {
+      font-size: 40px;
+      line-height: 44px;
+      margin-top: 20px;
+      color: #c99e00;
+      text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 #000, -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 #000;
 }
 p2 {
-     font-size: 20px;
-     line-height: 44px;
-     margin-top: 20px;
-     color: #ff0000;
-     text-shadow: -1px -1px 0 rgb(160, 160, 160),1px -1px 0 rgb(117, 114, 114),-1px 1px 0 rgb(117, 117, 117), 1px 1px 0 #000;
+      font-size: 20px;
+      line-height: 44px;
+      margin-top: 20px;
+      color: #c99e00;
+      text-shadow: -1px -1px 0 rgb(0, 0, 0),1px -1px 0 qrgb(0, 0, 0),-1px 1px 0 rgb(0, 0, 0), 1px 1px 0 #000;
 }
 
-     </style>
+
+      </style>
     </head>
 
    <div class="bg"></div>
